# yaml2pptx

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run.sh
examples/: arctic_analytics.yaml  coral_brand_refresh.yaml  earth_urban_plan.yaml  executive_board_report.yaml  forest_sustainability.yaml  full_featured.yaml  midnight_ml_pipeline.yaml  neon_devops_keynote.yaml  ocean_research.yaml  product_launch.yaml  quarterly_review.yaml  showcase.yaml  simple.yaml  sunset_pitch_deck.yaml  tech_strategy.yaml
scripts/: create_default_template.py
src/yaml2pptx/: __init__.py  __main__.py  cli.py  config.py  themes.py
src/yaml2pptx/components/: agenda.py  base.py  cards.py  icons.py  panels.py  quote.py  renderer.py  timeline.py  title_page.py
src/yaml2pptx/engine/: charts.py  generator.py  images.py  tables.py  template.py  text.py
src/yaml2pptx/models/: elements.py  presentation.py  slides.py
src/yaml2pptx/parser/: markdown_parser.py  yaml_parser.py
templates/: default.pptx
tests/: conftest.py  test_cli.py  test_components.py  test_generator.py  test_markdown_parser.py  test_models.py  test_tables_charts.py  test_template.py  test_yaml_parser.py
vscode-extension/: .vscodeignore  package-lock.json  package.json  tsconfig.json  yaml2pptx-0.1.0.vsix
vscode-extension/media/: preview.css  preview.js
vscode-extension/schemas/: yaml2pptx.schema.json
vscode-extension/snippets/: yaml2pptx.json
vscode-extension/src/: extension.ts  previewPanel.ts
