[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaml2pptx"
version = "0.1.0"
description = "Generate professional PowerPoint presentations from YAML — 17 slide types, 10 themes, native editable output"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Fredrik Saetre" },
]
keywords = [
    "powerpoint", "pptx", "yaml", "presentation", "slides",
    "slides-as-code", "office", "cli", "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "python-pptx>=1.0.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
watch = [
    "watchdog>=4.0",
]
ai = [
    "anthropic>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/fredrsat/yaml2pptx"
Repository = "https://github.com/fredrsat/yaml2pptx"
Issues = "https://github.com/fredrsat/yaml2pptx/issues"

[project.scripts]
yaml2pptx = "yaml2pptx.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/yaml2pptx"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
